# conventional-commits-next-semver

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
conventional_commits_next_semver/: all.html  index.html
src/: error.rs  git.rs  lib.rs  types.rs  utils.rs
src/conventional_commits_next_semver/: lib.rs.html
